--- a/web/app/themes/schnapps/package.json
+++ b/web/app/themes/schnapps/package.json
@@ -16,5 +16,8 @@
     "parcel": "^2.9.2",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2"
+  },
+  "dependencies": {
+    "blaze-slider": "^1.9.3"
   }
 }
