feat: adds gravity forms

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,5 @@ AUTH_SALT='generateme'
 SECURE_AUTH_SALT='generateme'
 LOGGED_IN_SALT='generateme'
 NONCE_SALT='generateme'
+
+WP_PLUGIN_GF_KEY=abcdef
