--- a/web/app/themes/schnapps/package.json
+++ b/web/app/themes/schnapps/package.json
@@ -5,13 +5,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "parcel ",
-    "build": "parcel build "
+    "build": "parcel build",
+    "build-blocks": "wp-scripts build"
   },
   "source": "src/main.js",
   "main": "dist/main.js",
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@wordpress/scripts": "^26.6.0",
     "autoprefixer": "^10.4.14",
     "parcel": "^2.9.2",
     "postcss": "^8.4.24",
