--- a/web/app/themes/schnapps/package.json
+++ b/web/app/themes/schnapps/package.json
@@ -6,13 +6,15 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "parcel ",
     "build": "parcel build",
-    "build-blocks": "wp-scripts build"
+    "build-blocks": "wp-scripts build",
+    "dev-blocks": "wp-scripts start"
   },
   "source": "src/main.js",
   "main": "dist/main.js",
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@wordpress/icons": "^9.26.0",
     "@wordpress/scripts": "^26.6.0",
     "autoprefixer": "^10.4.14",
     "parcel": "^2.9.2",
