--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,13 @@
   },
   "repositories": [
     {
+      "type": "path",
+      "url": "../packages/giantpeach/blocks",
+      "options": {
+        "symlink": false
+      }
+    },
+    {
       "type": "composer",
       "url": "https://wpackagist.org",
       "only": [
@@ -69,7 +76,8 @@
     "roots/wp-password-bcrypt": "1.1.0",
     "wpackagist-theme/twentytwentythree": "^1.0",
     "wpengine/advanced-custom-fields-pro": "*",
-    "gravityforms/gravityforms": "2.4.21.3"
+    "gravityforms/gravityforms": "2.4.21.3",
+    "giantpeach/blocks": "@dev"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.7.1",
@@ -111,7 +119,7 @@
   },
   "autoload": {
     "psr-4": {
-      "Giantpeach\\": "web/app/themes/schnapps/src/"
+      "Giantpeach\\Schnapps\\": "web/app/themes/schnapps/src/"
     }
   }
 }
