--- a/composer.json
+++ b/composer.json
@@ -79,7 +79,8 @@
     "gravityforms/gravityforms": "2.4.21.3",
     "giantpeach/blocks": "@dev",
     "twig/twig": "^3.6",
-    "giantpeach/twiglet": "dev-main"
+    "giantpeach/twiglet": "dev-main",
+    "giantpeach/navigation": "@dev"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.7.1",
