--- a/web/app/themes/schnapps/package.json
+++ b/web/app/themes/schnapps/package.json
@@ -22,6 +22,8 @@
     "tailwindcss": "^3.3.2"
   },
   "dependencies": {
-    "blaze-slider": "^1.9.3"
+    "alpinejs": "^3.12.2",
+    "blaze-slider": "^1.9.3",
+    "motion": "^10.16.2"
   }
 }
