--- a/composer.json
+++ b/composer.json
@@ -80,7 +80,9 @@
     "giantpeach/blocks": "@dev",
     "twig/twig": "^3.6",
     "giantpeach/twiglet": "dev-main",
-    "giantpeach/navigation": "dev-main"
+    "giantpeach/navigation": "dev-main",
+    "league/glide": "^2.2",
+    "giantpeach/images": "dev-main"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.7.1",
