--- a/composer.json
+++ b/composer.json
@@ -82,7 +82,8 @@
     "giantpeach/twiglet": "dev-main",
     "giantpeach/navigation": "dev-main",
     "league/glide": "^2.2",
-    "giantpeach/images": "dev-main"
+    "giantpeach/images": "dev-main",
+    "wpackagist-plugin/acf-gravityforms-add-on": "^1.3"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.7.1",
