--- a/web/app/themes/schnapps/package.json
+++ b/web/app/themes/schnapps/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@wordpress/icons": "^9.26.0",
     "@wordpress/scripts": "^26.6.0",
     "autoprefixer": "^10.4.14",
