--- a/composer.json
+++ b/composer.json
@@ -83,7 +83,8 @@
     "giantpeach/navigation": "dev-main",
     "league/glide": "^2.2",
     "giantpeach/images": "dev-main",
-    "wpackagist-plugin/acf-gravityforms-add-on": "^1.3"
+    "wpackagist-plugin/acf-gravityforms-add-on": "^1.3",
+    "giantpeach/query": "@dev"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.7.1",
