--- a/composer.json
+++ b/composer.json
@@ -30,13 +30,6 @@
   },
   "repositories": [
     {
-      "type": "path",
-      "url": "../packages/giantpeach/*",
-      "options": {
-        "symlink": false
-      }
-    },
-    {
       "type": "composer",
       "url": "https://wpackagist.org",
       "only": [
@@ -77,14 +70,15 @@
     "wpackagist-theme/twentytwentythree": "^1.0",
     "wpengine/advanced-custom-fields-pro": "*",
     "gravityforms/gravityforms": "2.4.21.3",
-    "giantpeach/blocks": "dev-main",
+    "giantpeach/blocks": "^1",
     "twig/twig": "^3.6",
-    "giantpeach/twiglet": "dev-main",
-    "giantpeach/navigation": "dev-main",
+    "giantpeach/twiglet": "^1",
+    "giantpeach/navigation": "^1",
     "league/glide": "^2.2",
-    "giantpeach/images": "dev-main",
+    "giantpeach/images": "^1",
     "wpackagist-plugin/acf-gravityforms-add-on": "^1.3",
-    "giantpeach/query": "@dev"
+    "giantpeach/query": "@dev",
+    "giantpeach/route": "^1"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.7.1",
