--- a/web/app/themes/schnapps/package.json
+++ b/web/app/themes/schnapps/package.json
@@ -11,6 +11,7 @@
   },
   "source": [
     "src/main.js",
+    "src/editor.css",
     "src/editor.js"
   ],
   "author": "",
@@ -25,14 +26,15 @@
     "tailwindcss": "^3.3.2"
   },
   "dependencies": {
+    "@alpinejs/intersect": "^3.13.0",
+    "@wordpress/dom-ready": "^3.36.0",
+    "@wordpress/hooks": "^3.36.0",
+    "@wordpress/icons": "^9.26.0",
+    "@wordpress/scripts": "^26.6.0",
     "alpinejs": "^3.12.2",
     "blaze-slider": "^1.9.3",
     "motion": "^10.16.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@wordpress/dom-ready": "^3.36.0",
-    "@wordpress/hooks": "^3.36.0",
-    "@wordpress/icons": "^9.26.0",
-    "@wordpress/scripts": "^26.6.0"
+    "react-dom": "^18.2.0"
   }
 }
