adds wp cli to lando

--- a/.lando.yml
+++ b/.lando.yml
@@ -8,3 +8,12 @@ config:
   webroot: web
   database: mariadb
   xdebug: true
+services:
+  appserver:
+    build_as_root:
+      - curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
+      - chmod +x wp-cli.phar
+      - mv wp-cli.phar /usr/local/bin/wp
+tooling:
+  wp:
+    service: 'appserver'
