--- a/.env.example
+++ b/.env.example
@@ -17,14 +17,7 @@ WP_SITEURL="${WP_HOME}/wp"
 # Specify optional debug.log path
 # WP_DEBUG_LOG='/path/to/debug.log'
 
-# Generate your keys here: https://roots.io/salts.html
-AUTH_KEY='generateme'
-SECURE_AUTH_KEY='generateme'
-LOGGED_IN_KEY='generateme'
-NONCE_KEY='generateme'
-AUTH_SALT='generateme'
-SECURE_AUTH_SALT='generateme'
-LOGGED_IN_SALT='generateme'
-NONCE_SALT='generateme'
-
+# Plugins
 WP_PLUGIN_GF_KEY=abcdef
+
+# Salts generated automatically on project creationGenerate your keys here: https://roots.io/salts.html
