--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,14 @@
           "gotoandplay/gravityforms-composer-installer": "^2.3"
         }
       }
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/Giant-Peach-Design/wp-cli-salts-command"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/Giant-Peach-Design/wp-salts"
     }
   ],
   "require": {
@@ -58,7 +66,8 @@
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.7.1",
-    "roave/security-advisories": "dev-latest"
+    "roave/security-advisories": "dev-latest",
+    "giantpeach/wp-salts": "dev-master"
   },
   "config": {
     "optimize-autoloader": true,
@@ -88,7 +97,11 @@
   },
   "scripts": {
     "post-root-package-install": [
-      "php -r \"copy('.env.example', '.env');\""
+      "php -r \"copy('.env.example', '.env');\"",
+      "Giantpeach\\Schnapps\\Salts\\SaltsGenerator::generateSaltsForProject"
+    ],
+    "post-update-cmd": [
+      "Giantpeach\\Schnapps\\Salts\\SaltsGenerator::updateSaltsForProject"
     ],
     "test": [
       "phpcs"
