--- a/composer.json
+++ b/composer.json
@@ -97,7 +97,9 @@
   },
   "scripts": {
     "post-root-package-install": [
-      "php -r \"copy('.env.example', '.env');\"",
+      "php -r \"copy('.env.example', '.env');\""
+    ],
+    "post-create-project-cmd": [
       "Giantpeach\\Schnapps\\Salts\\SaltsGenerator::generateSaltsForProject"
     ],
     "post-update-cmd": [
