--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,7 @@
     "giantpeach/navigation": "^1",
     "giantpeach/images": "^1",
     "wpackagist-plugin/acf-gravityforms-add-on": "^1.3",
-    "giantpeach/query": "@dev",
+    "giantpeach/query": "^1",
     "giantpeach/route": "^1"
   },
   "require-dev": {
