--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,13 @@
     {
       "type": "vcs",
       "url": "https://github.com/Giant-Peach-Design/wp-salts"
+    },
+    {
+      "type": "path",
+      "url": "../packages/giantpeach/config",
+      "options": {
+        "symlink": false
+      }
     }
   ],
   "require": {
@@ -60,7 +67,8 @@
     "giantpeach/images": "^1",
     "wpackagist-plugin/acf-gravityforms-add-on": "^1.3",
     "giantpeach/query": "^1",
-    "giantpeach/route": "^1"
+    "giantpeach/route": "^1",
+    "giantpeach/config": "dev-main"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.7.1",
