--- a/composer.json
+++ b/composer.json
@@ -39,13 +39,6 @@
     {
       "type": "vcs",
       "url": "https://github.com/Giant-Peach-Design/wp-salts"
-    },
-    {
-      "type": "path",
-      "url": "../packages/giantpeach/config",
-      "options": {
-        "symlink": false
-      }
     }
   ],
   "require": {
@@ -64,11 +57,11 @@
     "twig/twig": "^3.6",
     "giantpeach/twiglet": "^1",
     "giantpeach/navigation": "^1",
-    "giantpeach/images": "^1",
+    "giantpeach/images": "dev-next",
     "wpackagist-plugin/acf-gravityforms-add-on": "^1.3",
     "giantpeach/query": "^1",
     "giantpeach/route": "^1",
-    "giantpeach/config": "dev-main"
+    "giantpeach/config": "^1"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.7.1",
