--- a/composer.json
+++ b/composer.json
@@ -61,7 +61,8 @@
     "wpackagist-plugin/acf-gravityforms-add-on": "^1.3",
     "giantpeach/query": "^1",
     "giantpeach/route": "^1",
-    "giantpeach/config": "^1"
+    "giantpeach/config": "^1",
+    "giantpeach/schnapps-framework": "^1"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.7.1",
