feat: adds GA config option

--- a/.env.example
+++ b/.env.example
@@ -20,4 +20,6 @@ WP_SITEURL="${WP_HOME}/wp"
 # Plugins
 WP_PLUGIN_GF_KEY=abcdef
 
+GA_ID=UA-XXXXX-Y
+
 # Salts generated automatically on project creationGenerate your keys here: https://roots.io/salts.html
