--- a/composer.json
+++ b/composer.json
@@ -62,12 +62,15 @@
     "giantpeach/query": "^1",
     "giantpeach/route": "^1",
     "giantpeach/config": "^1",
-    "giantpeach/schnapps-framework": "^1"
+    "giantpeach/schnapps-framework": "^1",
+    "guzzlehttp/guzzle": "^7.8"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.7.1",
     "roave/security-advisories": "dev-latest",
-    "giantpeach/wp-salts": "dev-master"
+    "giantpeach/wp-salts": "dev-master",
+    "phpunit/phpunit": "^10.5",
+    "mockery/mockery": "^1.6"
   },
   "config": {
     "optimize-autoloader": true,
