Update giantpeach/blocks version

--- a/composer.json
+++ b/composer.json
@@ -39,13 +39,6 @@
     {
       "type": "vcs",
       "url": "https://github.com/Giant-Peach-Design/wp-salts"
-    },
-    {
-      "type": "path",
-      "url": "../packages/giantpeach/blocks",
-      "options": {
-        "symlink": false
-      }
     }
   ],
   "require": {
@@ -60,7 +53,7 @@
     "roots/wp-password-bcrypt": "1.1.0",
     "wpackagist-theme/twentytwentythree": "^1.0",
     "wpengine/advanced-custom-fields-pro": "*",
-    "giantpeach/blocks": "@dev",
+    "giantpeach/blocks": "^1",
     "twig/twig": "^3.6",
     "giantpeach/twiglet": "^1",
     "giantpeach/navigation": "^1",
