--- a/web/app/themes/schnapps/package.json
+++ b/web/app/themes/schnapps/package.json
@@ -17,11 +17,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@prettier/plugin-php": "^0.22.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.14",
     "parcel": "^2.9.2",
     "postcss": "^8.4.24",
+    "prettier": "^3.2.5",
     "process": "^0.11.10",
     "tailwindcss": "^3.3.2"
   },
