--- a/web/app/themes/schnapps/package.json
+++ b/web/app/themes/schnapps/package.json
@@ -7,25 +7,25 @@
     "dev": "parcel ",
     "build": "parcel build",
     "build-blocks": "wp-scripts build",
-    "dev-blocks": "wp-scripts start"
+    "dev-blocks": "wp-scripts start",
+    "dev-editor": "wp-scripts start src/Editor/editor.js --webpack-src-dir=src/Editor --output-path=dist/editor"
   },
   "source": [
     "src/main.js",
-    "src/editor.css",
-    "src/editor.js"
+    "src/editor.css"
   ],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@prettier/plugin-php": "^0.22.2",
-    "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/typography": "^0.5.9",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.14",
     "parcel": "^2.9.2",
     "postcss": "^8.4.24",
     "prettier": "^3.2.5",
     "process": "^0.11.10",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.4.1"
   },
   "dependencies": {
     "@alpinejs/intersect": "^3.13.0",
