--- a/web/app/themes/schnapps/package.json
+++ b/web/app/themes/schnapps/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "parcel ",
+    "dev": "parcel --hmr-port 50619 --no-cache",
     "build": "parcel build",
     "build-blocks": "wp-scripts build",
     "dev-blocks": "wp-scripts start",
-    "dev-editor": "wp-scripts start src/Editor/editor.js --webpack-src-dir=src/Editor --output-path=dist/editor"
+    "dev-editor": "wp-scripts start src/Editor/editor.js --webpack-src-dir=src/Editor --output-path=dist/editor",
+    "build-editor": "wp-scripts build src/Editor/editor.js --webpack-src-dir=src/Editor --output-path=dist/editor"
   },
   "source": [
     "src/main.js",
@@ -17,15 +18,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/plugin-syntax-import-attributes": "^7.24.1",
     "@prettier/plugin-php": "^0.22.2",
     "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.12",
+    "@wordpress/babel-plugin-import-jsx-pragma": "^4.38.0",
     "autoprefixer": "^10.4.14",
-    "parcel": "^2.9.2",
+    "parcel": "^2.12.0",
     "postcss": "^8.4.24",
     "prettier": "^3.2.5",
     "process": "^0.11.10",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.3"
   },
   "dependencies": {
     "@alpinejs/intersect": "^3.13.0",
