--- a/web/app/themes/schnapps/package.json
+++ b/web/app/themes/schnapps/package.json
@@ -38,6 +38,8 @@
     "@wordpress/scripts": "^26.6.0",
     "alpinejs": "^3.12.2",
     "blaze-slider": "^1.9.3",
+    "body-scroll-lock": "^4.0.0-beta.0",
+    "lodash.throttle": "^4.1.1",
     "motion": "^10.16.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
